--- a/index.html
+++ b/index.html
@@ -246,10 +246,10 @@
                         <div class="hover-items">
                             <h3>Project Source</h3>
                             <div class="icons">
-                                <a href="#" class="icon" target="_blank">
+                                <a href="https://github.com/arunar9363/WizzArt" class="icon" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="#" class="icon" target="_blank">
+                                <a href="https://wizz-art-chamber.vercel.app/" class="icon" target="_blank">
                                     <i class="fas fa-eye"></i>
                                 </a>
                             </div>
