--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/arun.png" alt="">
+                    <img src="img/Arun.png" alt="">
                 </div>
             </div>
             <div class="right-header">
@@ -30,7 +30,7 @@
                     Focusing on responsive, user-friendly applications. Enhancing backend skills and deepening knowledge in Data Structures, Algorithms, Software Engineering, and Data Analytics to become a well-rounded developer.
                 </p>
                 <div class="btn-con">
-                    <a href="https://drive.google.com/file/d/1jGw09m48MUefxQLwdZNn0ZOylJWjUBIy/view?usp=sharing" class="main-btn" target="_blank">
+                    <a href="https://drive.google.com/file/d/1NCa7jVgOwvTH4MuhGWKvrAMAQqdIB9r3/view?usp=sharing" class="main-btn" target="_blank">
                         <span class="btn-text">Download resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -55,7 +55,7 @@
                     My ultimate goal is to build innovative solutions that make a real impact, while continuously growing both personally and professionally.
                 </p><br>
                 <div class="btn-con">
-                    <a href="https://drive.google.com/file/d/1jGw09m48MUefxQLwdZNn0ZOylJWjUBIy/view?usp=sharing" class="main-btn" target="_blank">
+                    <a href="https://drive.google.com/file/d/1NCa7jVgOwvTH4MuhGWKvrAMAQqdIB9r3/view?usp=sharing" class="main-btn" target="_blank">
                         <span class="btn-text">Download resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -232,11 +232,12 @@
                     <div class="project-text">
                         <h4>DoctorX – A Smart Digital Health Assistant</h4>
                         <h5>HTML, CSS, JavaScript, React.js, Node.js, Express.js</h5>
-                        <p>
-                           – Developed a digital health platform that analyzes user symptoms through assessments and recommends appropriate care levels (emergency, hospital, or home treatment).<br>
-                           – Built a comprehensive disease library with search functionality by disease name or symptoms, plus integrated real-time WHO health news updates.<br>
-                           – Implemented responsive React.js UI and REST APIs with Node.js/Express.js for seamless symptom analysis, care recommendations, and cross-device accessibility.
-                        </p>
+                    <p>
+                        – I built DoctorX from the ground up as a smart health companion. Its core is an <strong>AI Symptom Analyzer</strong> that gives users instant, intelligent feedback on their symptoms.<br>
+                        – I also integrated a dedicated <strong>AI Assistant</strong> to provide personalized health suggestions and wellness guidance, answering user questions in seconds.<br>
+                       – It features a comprehensive <strong>Diseases Library</strong> I designed to be clear and easy to navigate, covering everything from symptoms to prevention, and it pulls <strong>real-time updates from the WHO</strong> so the info is always current.<br>
+                       – The entire front end is built with a responsive React.js UI, all powered by my own REST APIs using Node.js and Express to make sure it runs smoothly on any device.
+                    </p>
                     </div>
                 </div>
 
