--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
                         <h4>DoctorX – A Smart Digital Health Assistant</h4>
                         <h5>HTML, CSS, JavaScript, React.js, Node.js, Express.js</h5>
                     <p>
-                        – I built DoctorX from the ground up as a smart health companion. Its core is an <strong>AI Symptom Analyzer</strong> that gives users instant, intelligent feedback on their symptoms.<br>
-                        – I also integrated a dedicated <strong>AI Assistant</strong> to provide personalized health suggestions and wellness guidance, answering user questions in seconds.<br>
-                       – It features a comprehensive <strong>Diseases Library</strong> I designed to be clear and easy to navigate, covering everything from symptoms to prevention, and it pulls <strong>real-time updates from the WHO</strong> so the info is always current.<br>
+                        – I built DoctorX from the ground up as a smart health companion. Its core is an AI Symptom Analyzer that gives users instant, intelligent feedback on their symptoms.<br>
+                        – I also integrated a dedicated AI Assistant to provide personalized health suggestions and wellness guidance, answering user questions in seconds.<br>
+                       – It features a comprehensive Diseases Library I designed to be clear and easy to navigate, covering everything from symptoms to prevention, and it pulls real-time updates from the WHO so the info is always current.<br>
                        – The entire front end is built with a responsive React.js UI, all powered by my own REST APIs using Node.js and Express to make sure it runs smoothly on any device.
                     </p>
                     </div>
@@ -393,6 +393,24 @@
                          <p>I earned the JavaScript (Basic) skill certification from HackerRank by passing a timed technical assessment. This certification validates a strong foundational knowledge of JavaScript syntax, logic, and core problem-solving abilities essential for web development.</p>
                      </div>
                 </div>
+
+                <div class="cert-item">
+                    <div class="image">
+                       <img src="img/java.png" alt="Java Certification">
+                        <div class="hover-items">
+                            <h3>View Certificate</h3>
+                            <div class="icons">
+                                <a href="https://drive.google.com/file/d/10V-0CqVLLL93QOD9dIM2I1BR5PxntvAa/view?usp=sharing" class="icon" target="_blank">
+                                    <i class="fas fa-download"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cert-text">
+                        <h4>Java Intermediate - Sololearn</h4>
+                         <p>I earned the Java Intermediate certificate from Sololearn by successfully completing the course and demonstrating a strong theoretical and practical understanding of core Java principles. This certification validates my skills in object-oriented programming, data structures, and other intermediate-level Java concepts essential for backend development.</p>
+                    </div>
+               </div>
 
                <div class="cert-item">
                     <div class="image">
