--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                 <a href="https://github.com/arunar9363/DoctorX" class="icon" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="https://doctor-x-care.vercel.app/" class="icon" target="_blank">
+                                <a href="https://www.doctorxcare.in/" class="icon" target="_blank">
                                     <i class="fas fa-eye"></i>
                                 </a>
                             </div>
